# lufa

./: .clang-format  .gitignore  CMakeLists.txt  Descriptors.c  HIDReport.c  HIDReport.h  MIDI.c  MIDI.h  Makefile  PadConfig.h  README.md  avr.cmake  gen_pad_config.py  hidreport.c  hidreport.h  pad_config.json  padconfig.h  rb3-hid-reports.txt  rb3-midi-adapter.c  rb3-midi-adapter.h
Config/: AppConfig.h  LUFAConfig.h  PadConfig.json
LUFA/: CMakeLists.txt
LUFA/Drivers/: CMakeLists.txt
LUFA/Platform/: CMakeLists.txt
kicad/: rb3-midi-adapter-design.xml
pcb/: .gitignore  rb3-midi-adapter-design-cache.kicad_sym  rb3-midi-adapter-design.kicad_pcb  rb3-midi-adapter-design.kicad_pro  rb3-midi-adapter-design.kicad_sch  sym-lib-table
rb3-midi-adapter-design/: rb3-midi-adapter-design-cache.lib  rb3-midi-adapter-design.kicad_pcb  rb3-midi-adapter-design.kicad_pcb-bak  rb3-midi-adapter-design.kicad_pro  rb3-midi-adapter-design.kicad_sch  rb3-midi-adapter-design.pro  rb3-midi-adapter-design.sch  rb3-midi-adapter-design.sch-bak
src/: CMakeLists.txt  Descriptors.c  Descriptors.h  HIDReport.c  HIDReport.h  MIDI.c  MIDI.h  PadConfig.c  PadConfig.c.in  PadConfig.h  PadConfig.h.mako  rb3-midi-adapter.c
